force-app/main/default/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <description>A driver license application captured during an Agentforce conversation. Anchors all data collected in the chat: uploaded documents, extracted personal details, geocoded address, and the resulting appointment.</description>
    <label>Application</label>
    <pluralLabel>Applications</pluralLabel>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>