force-app/main/default/objects/Application__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName><label>Birthdate</label><type>Date</type><required>false</required>
</CustomField>