force-app/main/default/objects/Application__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName><label>Contact</label><type>Lookup</type>
    <referenceTo>Contact</referenceTo><relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName><required>false</required>
</CustomField>