force-app/main/default/objects/Application__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName><label>Latitude</label><type>Number</type><precision>9</precision><scale>6</scale><required>false</required>
</CustomField>