force-app/main/default/objects/Application__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName><label>Longitude</label><type>Number</type><precision>9</precision><scale>6</scale><required>false</required>
</CustomField>