force-app/main/default/objects/Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName><label>Status</label><type>Picklist</type><required>false</required>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
        <value><fullName>Docs Uploaded</fullName><default>false</default><label>Docs Uploaded</label></value>
        <value><fullName>Details Confirmed</fullName><default>false</default><label>Details Confirmed</label></value>
        <value><fullName>Scheduled</fullName><default>false</default><label>Scheduled</label></value>
    </valueSetDefinition></valueSet>
</CustomField>